Started work on header and selection cards

--- a/sbc-customize-page/scss/_mixins.scss
+++ b/sbc-customize-page/scss/_mixins.scss
@@ -6,3 +6,10 @@
     justify-content: $justify;
     
 }
+
+@mixin imageFill($url){
+    background-image: $url;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
