--- a/sbc-customize-page/scss/style.scss
+++ b/sbc-customize-page/scss/style.scss
@@ -1,7 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap');
+
+
 $primaryClr: #D71D2D;
 $secondaryClr: #00B2CA;
 $black: #171614;
 $white: #F6F1F8;
+$primaryFont: 'Roboto Mono', monospace;
+$heroFont: 'Ms Madi', cursive;
+$backgroundGradient: url('../images/gradient_img.png');
+
+
 
 @import './mixins';
 
@@ -19,23 +27,74 @@ $white: #F6F1F8;
 }
 
 body{
-    box-sizing: border-box;
-    background: $black;
+@include imageFill($backgroundGradient);
+
     width: 100%;
-    height: 100vh
+    height: 100vh;
+
 
 }
 
 //header
 
 header{
-    @include flex(row, left);
-    width: auto;
-    
+    @include flex(row, center, space-between);
+
+    flex-wrap: wrap;
+    background: rgba(23, 22, 20, 0.8);
+    border-bottom: 1px solid $primaryClr;
+    width: 100%;
+
 
     h1{
-        color: $white;
-        margin: 2rem 0;
+        font-family: $heroFont;
+        color: $primaryClr;
+        font-size: 2.2rem;
+        margin: 5px 1rem;
+    }
 
+    p{
+        text-align: center;
+        color: $secondaryClr;
+        font-size: 1.2rem;
+    }
+
+   
+}
+
+
+
+.card-box{
+    @include flex(row, center, space-around);
+
+
+
+    flex-wrap: wrap;
+    width: 100%;
+
+    .card{
+        width: 30%;
+        min-width: 300px;
+        margin: 2rem 0;
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 10px;
+        height: 400px;
+
+        .image-box{
+            @include imageFill(url('../images/card2_img.jpeg'));
+
+            height: 70%;;
+
+
+            img{
+                position: r;
+                width: 100%;
+            }
+        }
+
+        .info-box{
+            height: 30%;
+        }
+        
     }
 }
