--- a/sbc-customize-page/scss/style.css
+++ b/sbc-customize-page/scss/style.css
@@ -11,6 +11,8 @@ body {
   background-size: cover;
   width: 100%;
   height: 100vh;
+  font-family: "Roboto Mono", monospace;
+  color: #171614;
 }
 
 header {
@@ -44,12 +46,12 @@ header p {
   width: 100%;
 }
 .card-box .card {
-  width: 30%;
   min-width: 300px;
+  width: 25%;
   margin: 2rem 0;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
-  height: 400px;
+  height: 500px;
 }
 .card-box .card .image-box {
   background-image: url("../images/card2_img.jpeg");
@@ -57,11 +59,47 @@ header p {
   background-repeat: no-repeat;
   background-size: cover;
   height: 70%;
+  border-radius: 10px;
 }
-.card-box .card .image-box img {
-  position: r;
-  width: 100%;
+.card-box .card .image-box h3 {
+  padding-left: 1.5rem;
+  padding-top: 1rem;
+  font-size: 1.5rem;
+}
+.card-box .card .image-box p {
+  padding-left: 1.5rem;
+  color: #D71D2D;
 }
 .card-box .card .info-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   height: 30%;
+}
+.card-box .card .info-box p {
+  width: 80%;
+  margin-top: 1rem;
+  color: #F6F1F8;
+}
+.card-box .card .info-box div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 1rem;
+  width: 80%;
+}
+.card-box .card .info-box div h4 {
+  color: #00B2CA;
+  font-size: 1.5rem;
+}
+.card-box .card .info-box div button {
+  border: none;
+  background: #D71D2D;
+  color: #F6F1F8;
+  font-size: 1.2rem;
+  padding: 3px;
+  border-radius: 10px;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
