--- a/sbc-customize-page/scss/_mixins.scss
+++ b/sbc-customize-page/scss/_mixins.scss
@@ -13,3 +13,13 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+    @mixin glassEffect{
+    /* From https://css.glass */
+    background: rgba(0, 0, 0, 0.21);
+    border-radius: 16px;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(16.9px);
+    -webkit-backdrop-filter: blur(16.9px);
+    border: 1px solid rgba(0, 0, 0, 0.09);
+}
