--- a/sbc-customize-page/scss/style.css
+++ b/sbc-customize-page/scss/style.css
@@ -5,12 +5,13 @@
 }
 
 body {
-  background-image: url("../images/gradient_img.png");
+  background-image: url("../images/site-background.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
   height: 100vh;
+  background-attachment: fixed;
   font-family: "Roboto Mono", monospace;
   color: #171614;
 }
@@ -20,8 +21,11 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  background: rgba(0, 0, 0, 0.21);
+  backdrop-filter: blur(16.9px);
+  -webkit-backdrop-filter: blur(16.9px);
+  border: 1px solid rgba(0, 0, 0, 0.09);
   flex-wrap: wrap;
-  background: rgba(23, 22, 20, 0.8);
   border-bottom: 1px solid #D71D2D;
   width: 100%;
 }
@@ -46,11 +50,13 @@ header p {
   width: 100%;
 }
 .card-box .card {
+  background: rgba(0, 0, 0, 0.21);
+  backdrop-filter: blur(16.9px);
+  -webkit-backdrop-filter: blur(16.9px);
+  border: 1px solid rgba(0, 0, 0, 0.09);
   min-width: 300px;
   width: 25%;
   margin: 2rem 0;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 10px;
   height: 500px;
 }
 .card-box .card .image-box {
