--- a/sbc-customize-page/scss/_mixins.scss
+++ b/sbc-customize-page/scss/_mixins.scss
@@ -14,12 +14,19 @@
     background-size: cover;
 }
 
-    @mixin glassEffect{
+@mixin glassCard{
     /* From https://css.glass */
-    background: rgba(0, 0, 0, 0.21);
+    background: rgba(255, 255, 255, 0.48);
     border-radius: 16px;
-    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(16.9px);
-    -webkit-backdrop-filter: blur(16.9px);
-    border: 1px solid rgba(0, 0, 0, 0.09);
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(11.2px);
+    -webkit-backdrop-filter: blur(11.2px);
+    border: 1px solid rgba(255, 255, 255, 0.14);
+}
+
+@mixin glassEffect{
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(11.2px);
+    -webkit-backdrop-filter: blur(11.2px);
+    border: 1px solid rgba(255, 255, 255, 0.14);
 }
