--- a/sbc-customize-page/scss/_mixins.scss
+++ b/sbc-customize-page/scss/_mixins.scss
@@ -25,8 +25,20 @@
 }
 
 @mixin glassEffect{
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(11.2px);
     -webkit-backdrop-filter: blur(11.2px);
     border: 1px solid rgba(255, 255, 255, 0.14);
+}
+
+@mixin linkText{
+    color: $black;
+    font-size: 1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    &:hover{
+        color: $secondaryClr;
+    }
+
 }
