--- a/sbc-customize-page/scss/style.css
+++ b/sbc-customize-page/scss/style.css
@@ -17,26 +17,105 @@ body {
   overflow-x: hidden;
 }
 
+@media only screen and (max-width: 800px) {
+  header {
+    background: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(11.2px);
+    -webkit-backdrop-filter: blur(11.2px);
+    border: 1px solid rgba(255, 255, 255, 0.14);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 64px;
+  }
+  header h2 {
+    font-family: "Roboto Mono", monospace;
+    color: #171614;
+    padding-left: 15%;
+  }
+  header h2 span {
+    color: #D71D2D;
+  }
+  header .nav {
+    display: none;
+  }
+  header .nav2 {
+    display: none;
+  }
+  header .hamburger {
+    display: block;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    background: #00B2CA;
+  }
+}
 header {
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(11.2px);
   -webkit-backdrop-filter: blur(11.2px);
   border: 1px solid rgba(255, 255, 255, 0.14);
-  flex-wrap: wrap;
-  border-bottom: 1px solid #D71D2D;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
-  padding: 0 6.5%;
   height: 64px;
 }
-header h1 {
-  font-family: "Ms Madi", cursive;
-  color: #D71D2D;
-  font-size: 2.2rem;
+header h2 {
+  width: 30%;
+  font-family: "Roboto Mono", monospace;
+  font-size: 1.5rem;
+  color: #171614;
+  margin-left: 5rem;
 }
-header p {
-  text-align: center;
+header h2 span {
+  color: #D71D2D;
+}
+header .nav {
+  width: 40%;
+}
+header .nav ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+}
+header .nav ul li a {
+  color: #171614;
+  font-size: 1rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+header .nav ul li a:hover {
   color: #00B2CA;
-  font-size: 1.2rem;
+}
+header .nav2 {
+  width: 30%;
+  margin-right: 5rem;
+}
+header .nav2 ul {
+  display: flex;
+  justify-content: end;
+  list-style: none;
+}
+header .nav2 ul li a {
+  color: #171614;
+  font-size: 1rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-left: 2rem;
+}
+header .nav2 ul li a:hover {
+  color: #00B2CA;
+}
+header .hamburger {
+  display: none;
 }
 
 .card-box {
@@ -57,7 +136,7 @@ header p {
   border: 1px solid rgba(255, 255, 255, 0.14);
   min-width: 300px;
   width: 25%;
-  margin: 2rem 0;
+  margin: 3rem;
   height: 500px;
 }
 .card-box .card .image-box {
