--- a/sbc-customize-page/scss/style.css
+++ b/sbc-customize-page/scss/style.css
@@ -15,6 +15,8 @@ body {
   font-family: "Roboto Mono", monospace;
   color: #171614;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 @media only screen and (max-width: 800px) {
@@ -70,6 +72,7 @@ header h2 {
   font-size: 1.5rem;
   color: #171614;
   margin-left: 5rem;
+  text-transform: uppercase;
 }
 header h2 span {
   color: #D71D2D;
@@ -85,6 +88,7 @@ header .nav ul {
   list-style: none;
 }
 header .nav ul li a {
+  cursor: pointer;
   color: #171614;
   font-size: 1rem;
   text-decoration: none;
@@ -104,6 +108,8 @@ header .nav2 ul {
   list-style: none;
 }
 header .nav2 ul li a {
+  cursor: pointer;
+  cursor: pointer;
   color: #171614;
   font-size: 1rem;
   text-decoration: none;
@@ -123,6 +129,7 @@ header .hamburger {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  margin-top: 3rem;
   flex-wrap: wrap;
   width: 100%;
 }
@@ -136,7 +143,6 @@ header .hamburger {
   border: 1px solid rgba(255, 255, 255, 0.14);
   min-width: 300px;
   width: 25%;
-  margin: 3rem;
   height: 500px;
 }
 .card-box .card .image-box {
@@ -190,4 +196,41 @@ header .hamburger {
   padding: 3px;
   border-radius: 10px;
   cursor: pointer;
+}
+
+.hero {
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(11.2px);
+  -webkit-backdrop-filter: blur(11.2px);
+  border: 1px solid rgba(255, 255, 255, 0.14);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
+  height: 30%;
+  border: none;
+}
+.hero h1 {
+  font-size: 2.5rem;
+  margin: 0 5rem;
+  text-transform: uppercase;
+}
+.hero h1 span {
+  color: #00B2CA;
+  font-family: "Ms Madi", cursive;
+  font-size: 2em;
+  text-transform: none;
+}
+
+.card-title {
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(11.2px);
+  -webkit-backdrop-filter: blur(11.2px);
+  border: 1px solid rgba(255, 255, 255, 0.14);
+  border: none;
+  border-bottom: 1px solid black;
+}
+.card-title p {
+  margin-left: 5rem;
+  margin-bottom: 0.3rem;
 }/*# sourceMappingURL=style.css.map */
