--- a/sbc-customize-page/scss/style.scss
+++ b/sbc-customize-page/scss/style.scss
@@ -35,6 +35,8 @@ body{
     font-family: $primaryFont;
     color: $black;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 
 
 }
@@ -104,6 +106,7 @@ body{
         font-size: 1.5rem;
         color: $black;
         margin-left: 5rem;
+        text-transform: uppercase;
 
         span{
             color: $primaryClr;
@@ -138,6 +141,7 @@ body{
 
             li{
                 a{
+                    cursor: pointer;
                     @include linkText;
                     margin-left: 2rem;
                 }
@@ -158,6 +162,7 @@ body{
 
 .card-box{
     @include flex(row, center, space-around);
+    margin-top: 3rem;
 
 
 
@@ -169,8 +174,6 @@ body{
 
         min-width: 300px;
         width: 25%;
-
-        margin: 3rem;
         height: 500px;
 
         .image-box{
@@ -230,4 +233,29 @@ body{
         }
         
     }
+}
+
+.hero{
+    @include glassEffect;
+    @include flex(row, center, left);
+
+    height: 30%;
+    border: none;
+
+    h1{
+        font-size: 2.5rem;
+        margin: 0 5rem;
+        text-transform: uppercase;
+
+        span{
+            color: $secondaryClr;
+            font-family: $heroFont;
+            font-size: 2em;
+            text-transform: none;
+        }
+    }
+
+}
+
+
 }
