--- a/sbc-customize-page/scss/style.css
+++ b/sbc-customize-page/scss/style.css
@@ -65,6 +65,8 @@ header {
   justify-content: space-between;
   width: 100%;
   height: 64px;
+  position: fixed;
+  z-index: 10;
 }
 header h2 {
   width: 30%;
@@ -129,7 +131,6 @@ header .hamburger {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  margin-top: 3rem;
   flex-wrap: wrap;
   width: 100%;
 }
@@ -209,6 +210,7 @@ header .hamburger {
   justify-content: left;
   height: 30%;
   border: none;
+  margin-top: 64px;
 }
 .hero h1 {
   font-size: 2.5rem;
@@ -222,15 +224,17 @@ header .hamburger {
   text-transform: none;
 }
 
-.card-title {
-  background: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(11.2px);
-  -webkit-backdrop-filter: blur(11.2px);
-  border: 1px solid rgba(255, 255, 255, 0.14);
-  border: none;
-  border-bottom: 1px solid black;
+.hero-text {
+  background: none;
 }
-.card-title p {
+
+.subheader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
   margin-left: 5rem;
-  margin-bottom: 0.3rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
 }/*# sourceMappingURL=style.css.map */
