--- a/sbc-customize-page/scss/style.css
+++ b/sbc-customize-page/scss/style.css
@@ -67,6 +67,7 @@ header {
   height: 64px;
   position: fixed;
   z-index: 10;
+  box-sizing: border-box;
 }
 header h2 {
   width: 30%;
@@ -130,9 +131,12 @@ header .hamburger {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 2rem 5rem;
   flex-wrap: wrap;
   width: 100%;
+  gap: 3rem;
 }
 .card-box .card {
   /* From https://css.glass */
@@ -145,6 +149,7 @@ header .hamburger {
   min-width: 300px;
   width: 25%;
   height: 500px;
+  padding: 1rem;
 }
 .card-box .card .image-box {
   background-image: url("../images/card2_img.jpeg");
@@ -153,7 +158,6 @@ header .hamburger {
   background-size: cover;
   height: 60%;
   border-radius: 10px;
-  margin: 1rem;
   box-shadow: 0 10px 8px rgba(0, 0, 0, 0.1);
 }
 .card-box .card .image-box h3 {
@@ -240,10 +244,56 @@ header .hamburger {
 }
 
 .form-box {
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(11.2px);
+  -webkit-backdrop-filter: blur(11.2px);
+  border: 1px solid rgba(255, 255, 255, 0.14);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   border: 1px solid blue;
   margin-top: 10vh;
+  height: 80%;
+  width: 100%;
+  padding: 2rem 5rem;
 }
 
 .hidden {
   display: none;
+}
+
+#two-color {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  width: 100%;
+  height: 100%;
+}
+#two-color .selection-box {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: start;
+  box-sizing: border-box;
+  gap: 3rem;
+  border: 2px solid #171614;
+  border-radius: 8px;
+  height: 90%;
+  padding: 1.5rem 3rem;
+}
+#two-color .selection-box h1 {
+  color: #00B2CA;
+  font-size: 1rem;
+}
+#two-color .selection-box .primary-color {
+  display: flex;
+  flex-direction: row;
+  gap: 5rem;
+}
+#two-color .arrow-box {
+  width: 48px;
+  height: 90%;
+  border: 1px solid black;
 }/*# sourceMappingURL=style.css.map */
