--- a/sbc-customize-page/scss/style.scss
+++ b/sbc-customize-page/scss/style.scss
@@ -101,6 +101,7 @@ body{
     height: 64px;
     position: fixed;
     z-index: 10;
+    box-sizing: border-box;
 
 
 
@@ -166,12 +167,13 @@ body{
 //cards
 
 .card-box{
-    @include flex(row, center, space-around);
+    @include flex(row, center, space-between);
 
-
-
+    box-sizing: border-box;
+    padding: 2rem 5rem;
     flex-wrap: wrap;
     width: 100%;
+    gap: 3rem;
 
     .card{
         @include glassCard;
@@ -179,13 +181,13 @@ body{
         min-width: 300px;
         width: 25%;
         height: 500px;
+        padding: 1rem;
 
         .image-box{
             @include imageFill(url('../images/card2_img.jpeg'));
 
             height: 60%;;
             border-radius: 10px;
-            margin: 1rem;
             box-shadow: 0 10px 8px rgba(0,0,0,0.1);
 
             h3{
@@ -281,12 +283,56 @@ body{
 //form menu
 
 .form-box{
+@include glassEffect;
+@include flex(row, center, center);
+
     border: 1px solid blue;
     margin-top: 10vh;
+    height: 80%;
+    width: 100%;
+    padding: 2rem 5rem;
 }
 
 .hidden{
     display: none;
 }
+
+#two-color{
+    @include flex(row, center, start);
+    width: 100%;
+    height: 100%;
+
+    .selection-box{
+        @include flex(column, left, start);
+            box-sizing: border-box;
+            gap: 3rem;
+        
+            border: 2px solid $black;
+            border-radius: 8px;
+            height: 90%;
+            padding: 1.5rem 3rem;
+
+            h1{
+                color: $secondaryClr;
+                font-size: 1rem;
+            }
+
+            .primary-color{
+                display: flex;
+                flex-direction: row;
+                gap: 5rem;
+            }
+
+        }
+
+        .arrow-box{
+            width: 48px;
+            height: 90%;
+            border: 1px solid black;
+        }
+}
+
+
+
 
 
