--- a/sbc-customize-page/scss/style.scss
+++ b/sbc-customize-page/scss/style.scss
@@ -257,7 +257,7 @@ body{
     @include glassEffect;
     @include flex(row, center, left);
 
-    height: 30%;
+    height: 20vh;
     border: none;
     margin-top: 64px;
 
@@ -283,14 +283,17 @@ body{
 //form menu
 
 .form-box{
-@include glassEffect;
-@include flex(row, center, center);
+    @include glassEffect;
+    @include flex(row, center, center);
 
     border: 1px solid blue;
     margin-top: 10vh;
     height: 80%;
     width: 100%;
     padding: 2rem 5rem;
+    box-sizing: border-box;
+
+    
 }
 
 .hidden{
@@ -298,39 +301,87 @@ body{
 }
 
 #two-color{
-    @include flex(row, center, start);
     width: 100%;
     height: 100%;
 
-    .selection-box{
-        @include flex(column, left, start);
+    .form-container{
+        display: grid;
+        grid-template-columns: auto auto 40%;
+        grid-template-rows: auto auto;
+        
+        width: 100%;
+        border: 2px solid blue;
+        align-items: center;
+
+        h1{
+            margin: 1rem 0;
+            grid-column-start: 1;
+            grid-column-end: 3;
+        }
+
+        .selection-box{
+            @include flex(column, left, start);
             box-sizing: border-box;
             gap: 3rem;
         
             border: 2px solid $black;
             border-radius: 8px;
-            height: 90%;
-            padding: 1.5rem 3rem;
+            padding: 1.5rem 0;
+            grid-row: 2;
 
+            
             h1{
                 color: $secondaryClr;
                 font-size: 1rem;
             }
+            .selection-type{
+                @include flex(row, center, space-between);
 
-            .primary-color{
-                display: flex;
-                flex-direction: row;
-                gap: 5rem;
+                h2{
+                    font-size: 1.8rem;
+                }
+
+                button{
+                    border: none;
+                    font-size: 1.2rem;
+                    margin-right: 1rem;
+                    background: $secondaryClr;
+                    color: $white;
+                    padding: 5px 10px;
+                    border-radius: 8px;
+                    cursor: pointer;
+                }
+            }
+        }
+
+        .config-container{
+            grid-row: 2;
+            border: 1px solid black;
+            height: 100%;
+            padding: 1.5rem;
+            box-sizing: border-box;
+
+            .config-box{
+                border: 1px solid red;
+                height: 100%;
+                width: 100%;
             }
 
         }
+    }
 
-        .arrow-box{
-            width: 48px;
-            height: 90%;
-            border: 1px solid black;
-        }
+
+
 }
+
+#three-color{
+    border: 1px solid red;
+
+    width: 30%;
+
+}
+
+
 
 
 
