--- a/sbc-customize-page/scss/_mixins.scss
+++ b/sbc-customize-page/scss/_mixins.scss
@@ -24,6 +24,13 @@
     border: 1px solid rgba(255, 255, 255, 0.14);
 }
 
+@mixin glassEffectBlack{
+    background: rgba(23, 22, 20, 0.9);
+    backdrop-filter: blur(11.2px);
+    -webkit-backdrop-filter: blur(11.2px);
+    border: 1px solid rgba(255, 255, 255, 0.14);
+}
+
 @mixin glassEffect{
     background: rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(11.2px);
