--- a/sbc-customize-page/scss/style.css
+++ b/sbc-customize-page/scss/style.css
@@ -59,22 +59,16 @@ header {
   backdrop-filter: blur(11.2px);
   -webkit-backdrop-filter: blur(11.2px);
   border: 1px solid rgba(255, 255, 255, 0.14);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
   width: 100%;
   height: 64px;
-  position: fixed;
-  z-index: 10;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 0 3rem;
 }
 header h2 {
-  width: 30%;
   font-family: "Roboto Mono", monospace;
-  font-size: 1.5rem;
   color: #171614;
-  margin-left: 5rem;
   text-transform: uppercase;
 }
 header h2 span {
@@ -208,7 +202,7 @@ header .hamburger {
   flex-direction: row;
   align-items: center;
   justify-content: left;
-  margin-left: 5rem;
+  margin-left: 6.5rem;
   margin-top: 2rem;
   margin-bottom: 1rem;
   text-transform: uppercase;
@@ -225,11 +219,10 @@ header .hamburger {
   justify-content: left;
   height: 20vh;
   border: none;
-  margin-top: 64px;
 }
 .hero h1 {
   font-size: 2.5rem;
-  margin: 0 5rem;
+  margin: 0 6.5rem;
   text-transform: uppercase;
 }
 .hero h1 span {
@@ -244,92 +237,104 @@ header .hamburger {
 }
 
 .form-box {
-  background: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(11.2px);
-  -webkit-backdrop-filter: blur(11.2px);
-  border: 1px solid rgba(255, 255, 255, 0.14);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  border: 1px solid blue;
+  background: rgba(23, 22, 20, 0.9);
+  backdrop-filter: blur(11.2px);
+  -webkit-backdrop-filter: blur(11.2px);
+  border: 1px solid rgba(255, 255, 255, 0.14);
   margin-top: 10vh;
-  height: 80%;
   width: 100%;
   padding: 2rem 5rem;
   box-sizing: border-box;
 }
-
-.hidden {
-  display: none;
-}
-
-#two-color {
+.form-box #main-config {
   width: 100%;
   height: 100%;
 }
-#two-color .form-container {
+.form-box #main-config .form-container {
   display: grid;
-  grid-template-columns: auto auto 40%;
-  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 0 1rem;
+  border: 1px solid #F6F1F8;
+  border-radius: 8px;
   width: 100%;
-  border: 2px solid blue;
-  align-items: center;
 }
-#two-color .form-container h1 {
-  margin: 1rem 0;
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-#two-color .form-container .selection-box {
+.form-box #main-config .form-container .selection-box {
   display: flex;
   flex-direction: column;
   align-items: left;
   justify-content: start;
   box-sizing: border-box;
   gap: 3rem;
-  border: 2px solid #171614;
   border-radius: 8px;
   padding: 1.5rem 0;
   grid-row: 2;
 }
-#two-color .form-container .selection-box h1 {
+.form-box #main-config .form-container .selection-box h1 {
   color: #00B2CA;
-  font-size: 1rem;
 }
-#two-color .form-container .selection-box .selection-type {
+.form-box #main-config .form-container .selection-box .selection-type {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  padding-left: 3rem;
 }
-#two-color .form-container .selection-box .selection-type h2 {
-  font-size: 1.8rem;
-}
-#two-color .form-container .selection-box .selection-type button {
-  border: none;
-  font-size: 1.2rem;
-  margin-right: 1rem;
-  background: #00B2CA;
+.form-box #main-config .form-container .selection-box .selection-type h3 {
+  font-size: 1.5rem;
   color: #F6F1F8;
-  padding: 5px 10px;
-  border-radius: 8px;
+}
+.form-box #main-config .form-container .selection-box .selection-type button {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: space-between;
+  border: none;
+  background: none;
+  color: #F6F1F8;
+  width: 32px;
+  height: 32px;
   cursor: pointer;
 }
-#two-color .form-container .config-container {
+.form-box #main-config .form-container .selection-box .selection-type button span {
+  content: " ";
+  width: 32px;
+  height: 5px;
+  background: #00B2CA;
+  border-radius: 3px;
+  transition: all 0.1s ease-out;
+}
+.form-box #main-config .form-container .selection-box .selection-type button span:nth-child(1) {
+  transform: rotate(45deg) translateY(4px) translateX(2px);
+}
+.form-box #main-config .form-container .selection-box .selection-type button span:nth-child(1).active {
+  transform: translateY(16px) rotate(45deg);
+  transform-origin: center;
+  background: #D71D2D;
+}
+.form-box #main-config .form-container .selection-box .selection-type button span:nth-child(2) {
+  transform: rotate(-45deg) translateY(-4px) translateX(2px);
+}
+.form-box #main-config .form-container .selection-box .selection-type button span:nth-child(2).active {
+  transform: translateY(-11px) rotate(-45deg);
+  transform-origin: center;
+  background: #D71D2D;
+}
+.form-box .config-box {
   grid-row: 2;
-  border: 1px solid black;
   height: 100%;
   padding: 1.5rem;
   box-sizing: border-box;
-}
-#two-color .form-container .config-container .config-box {
+  color: #F6F1F8;
   border: 1px solid red;
-  height: 100%;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
-
-#three-color {
-  border: 1px solid red;
-  width: 30%;
+.form-box .hidden {
+  display: none;
+  transition: all 0.2s ease-in-out;
 }/*# sourceMappingURL=style.css.map */
