--- a/sbc-customize-page/scss/style.scss
+++ b/sbc-customize-page/scss/style.scss
@@ -90,27 +90,21 @@ body{
   }
 
   //desktop
-
-
   //header
   header{
     @include glassEffect;
-    @include flex(row, center, space-between);
     
     width: 100%;
     height: 64px;
-    position: fixed;
-    z-index: 10;
     box-sizing: border-box;
 
-
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0 3rem;
 
     h2{
-        width: 30%;
         font-family: $primaryFont;
-        font-size: 1.5rem;
         color: $black;
-        margin-left: 5rem;
         text-transform: uppercase;
 
         span{
@@ -243,7 +237,7 @@ body{
 
 .subheader{
     @include flex(row, center, left);
-    margin-left: 5rem;
+    margin-left: 6.5rem;
     margin-top: 2rem;
     margin-bottom: 1rem;
     text-transform: uppercase;
@@ -259,11 +253,10 @@ body{
 
     height: 20vh;
     border: none;
-    margin-top: 64px;
 
     h1{
         font-size: 2.5rem;
-        margin: 0 5rem;
+        margin: 0 6.5rem;
         text-transform: uppercase;
 
         span{
@@ -280,105 +273,136 @@ body{
     background: none;
 }
 
+
+
 //form menu
 
 .form-box{
-    @include glassEffect;
     @include flex(row, center, center);
+    @include glassEffectBlack;
 
-    border: 1px solid blue;
     margin-top: 10vh;
-    height: 80%;
     width: 100%;
     padding: 2rem 5rem;
     box-sizing: border-box;
 
+    #main-config{
+        width: 100%;
+        height: 100%;
+        
+        .form-container{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 0 1rem;
+            border: 1px solid $white;
+            border-radius: 8px;
+            width: 100%;
+        
+            .selection-box{
+                @include flex(column, left, start);
+                box-sizing: border-box;
+                gap: 3rem;
+            
+                border-radius: 8px;
+                padding: 1.5rem 0;
+                grid-row: 2;
+            
+                
+                h1{
+                    color: $secondaryClr;
+                }
+                .selection-type{
+                    @include flex(row, center, space-between);
+                    padding-left: 3rem;
+                
+                    h3{
+                        font-size: 1.5rem;
+                        color: $white;
+                    }
+                
+                    button{
+                        @include flex(column, end, space-between);
+                        
+                        border: none;
+                        background: none;
+                        color: $white;
+                        width: 32px;
+                        height: 32px;
+                        cursor: pointer;
+
+
+
+                            span{
+                                content: ' ';
+                                width: 32px;
+                                height:5px;
+                                background: $secondaryClr;
+                                border-radius: 3px;
+                                transition: all 0.1s ease-out;
+                                }
+
+
+                                span:nth-child(1){
+                                    transform: 
+                                    rotate(45deg)
+                                    translateY(4px)
+                                    translateX(2px);
+                                }
+
+                                span:nth-child(1).active{
+                                    transform:
+                                    translateY(16px)
+                                    rotate(45deg);
+                                    transform-origin: center;
+                                    background: $primaryClr;
+                                }
     
-}
+                                span:nth-child(2){
+                                    transform: rotate(-45deg)
+                                    translateY(-4px)
+                                    translateX(2px);
+                                }
+
+                                span:nth-child(2).active{
+                                    transform:
+                                    translateY(-11px)
+                                    rotate(-45deg);
+                                    transform-origin: center;
+                                    background: $primaryClr;                                 
+                            }
+
+
+
+
+                            }
+                        
+
+
+                    }
+
+                    }
+                }
+            }
+        
+            .config-box{
+                grid-row: 2;
+                height: 100%;
+                padding: 1.5rem;
+                box-sizing: border-box;
+                color: $white;
+                border: 1px solid red;
+
+                display: flex;
+                flex-direction: column;
+                gap: 0.5rem;
+            
+            }
+
+
 
 .hidden{
     display: none;
-}
-
-#two-color{
-    width: 100%;
-    height: 100%;
-
-    .form-container{
-        display: grid;
-        grid-template-columns: auto auto 40%;
-        grid-template-rows: auto auto;
-        
-        width: 100%;
-        border: 2px solid blue;
-        align-items: center;
-
-        h1{
-            margin: 1rem 0;
-            grid-column-start: 1;
-            grid-column-end: 3;
-        }
-
-        .selection-box{
-            @include flex(column, left, start);
-            box-sizing: border-box;
-            gap: 3rem;
-        
-            border: 2px solid $black;
-            border-radius: 8px;
-            padding: 1.5rem 0;
-            grid-row: 2;
-
-            
-            h1{
-                color: $secondaryClr;
-                font-size: 1rem;
-            }
-            .selection-type{
-                @include flex(row, center, space-between);
-
-                h2{
-                    font-size: 1.8rem;
-                }
-
-                button{
-                    border: none;
-                    font-size: 1.2rem;
-                    margin-right: 1rem;
-                    background: $secondaryClr;
-                    color: $white;
-                    padding: 5px 10px;
-                    border-radius: 8px;
-                    cursor: pointer;
-                }
-            }
-        }
-
-        .config-container{
-            grid-row: 2;
-            border: 1px solid black;
-            height: 100%;
-            padding: 1.5rem;
-            box-sizing: border-box;
-
-            .config-box{
-                border: 1px solid red;
-                height: 100%;
-                width: 100%;
-            }
-
-        }
-    }
-
-
-
-}
-
-#three-color{
-    border: 1px solid red;
-
-    width: 30%;
-
+    transition: all 0.2s ease-in-out;
 }
 
 
@@ -387,3 +411,5 @@ body{
 
 
 
+
+}
